2006-03-21  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Installation Directory Variables): Fix typo.

2006-03-21  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoscan/autoscan.list: Refreshed.

2006-03-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/local.at (AT_CHECK_ENV): Ignore AC_SUBSTed Objective C
	and Erlang related variables.

	* lib/autoconf/c.m4 (AC_LANG(Objective C), AC_LANG_OBJC)
	(_AC_LANG_ABBREV(Objective C), _AC_LANG_PREFIX(Objective C))
	(AC_LANG_SOURCE(Objective C), AC_LANG_PROGRAM(Objective C))
	(AC_LANG_CALL(Objective C), AC_LANG_FUNC_LINK_TRY(Objective C))
	(AC_LANG_BOOL_COMPILE_TRY(Objective C))
	(AC_LANG_INT_SAVE(Objective C), AC_LANG_PREPROC(Objective C))
	(AC_PROG_OBJCPP, AC_LANG_COMPILER(Objective C), AC_PROG_OBJC)
	(_AC_PROG_OBJC_G): New macros.
	(_AC_ARG_VAR_CPPFLAGS): Adjusted.
	* doc/autoconf.texi (Objective C Compiler): New node.
	(Preset Output Variables): Document OBJCFLAGS.
	(Language Choice): Document `Objective C' language.
	(Fortran Compiler): Fix typo.
	* NEWS: Updated.
	Inspired by a patch from David M. Lloyd <dmlloyd@tds.net>.

2006-03-20  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Default Includes): Fix typo
	  s/AC_HEADERS_STDC/AC_HEADER_STDC/
	(Limitations of Usual Tools): s/unwriteable/unwritable/
	* lib/autoconf/lang.m4 (_AC_COMPILER_EXEEXT_DEFAULT, _AC_COMPILER_EXEEXT):
	  Fix typos in the comments.

2006-03-17  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/programs.m4 (AC_PATH_TOOL, AC_CHECK_TOOL, AC_CHECK_TOOLS):
	  Factor out the warning to...
	(_AC_TOOL_WARN): ... this new macro; use `cross_compiling'.
	* tests/local.at (AT_CHECK_MACRO_CROSS): Avoid this warning.
	* tests/semantics.at (AC_C_BIGENDIAN): Likewise.

2006-03-17  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/status.m4 (_AC_OUTPUT_FILES_PREPARE): Do not special
	  case `ac_delim' when writing the sed script.

2006-03-17  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sh.m4 (AS_BOURNE_COMPATIBLE): Removed BIN_SH=xpg4,